trunk/Archive2/e8/083687d5d32030/output
main.cpp:2:10: error: missing 'typename' prior to dependent type name 'Type::iterator'
Type Foo(Type::iterator First, Type::iterator Last)
         ^~~~~~~~~~~~~~
         typename 
main.cpp:2:32: error: missing 'typename' prior to dependent type name 'Type::iterator'
Type Foo(Type::iterator First, Type::iterator Last)
                               ^~~~~~~~~~~~~~
                               typename 
main.cpp:5:10: error: missing 'typename' prior to dependent type name 'Type::iterator'
    for (Type::iterator i = First; i != Last; i++)
         ^~~~~~~~~~~~~~
         typename 
main.cpp:7:13: error: expected expression
        if (...)
            ^
4 errors generated.
